plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_fails_to_look_at_not_found_entities.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "simpleReply": "notFound"
}
