plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_fails_to_look_inside_non_containers.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "simpleReply": "impossible"
}
