plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_looks_at_entities.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "entityObservation": {
    "entity": {
      "desc": null,
      "key": "E-1",
      "name": "Hammer",
      "qualified": "a Hammer"
    }
  }
}
