plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_a_route.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": {
      "areaObservation": {
        "area": {
          "desc": null,
          "key": "E-3",
          "name": "Welcome Area",
          "qualified": "Welcome Area"
        },
        "carrying": [],
        "items": [
          {
            "desc": null,
            "key": "E-4",
            "name": "Cool Rake",
            "qualified": "a Cool Rake"
          },
          {
            "desc": null,
            "key": "E-5",
            "name": "Boring Shovel",
            "qualified": "a Boring Shovel"
          },
          {
            "desc": null,
            "key": "E-6",
            "name": "East Exit",
            "qualified": "East Exit"
          }
        ],
        "living": [
          {
            "desc": null,
            "key": "E-2",
            "name": "Living",
            "qualified": "Living"
          }
        ],
        "person": {
          "desc": null,
          "key": "E-2",
          "name": "Living",
          "qualified": "Living"
        },
        "routes": []
      }
    }
  }
}
