plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_looks_in_area_with_items_on_ground_and_holding_items.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": {
      "areaObservation": {
        "area": {
          "desc": null,
          "key": "E-4",
          "name": "Welcome Area",
          "qualified": "Welcome Area"
        },
        "carrying": [
          {
            "desc": null,
            "key": "E-3",
            "name": "Cool Rake",
            "qualified": "a Cool Rake"
          }
        ],
        "items": [
          {
            "desc": null,
            "key": "E-5",
            "name": "Boring Shovel",
            "qualified": "a Boring Shovel"
          },
          {
            "desc": null,
            "key": "E-6",
            "name": "East Exit",
            "qualified": "an East Exit"
          }
        ],
        "living": [
          {
            "desc": null,
            "key": "E-2",
            "name": "Living",
            "qualified": "Living"
          }
        ],
        "person": {
          "desc": null,
          "key": "E-2",
          "name": "Living",
          "qualified": "Living"
        },
        "routes": []
      }
    }
  }
}
