plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_looks_in_empty_area.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": {
      "areaObservation": {
        "area": {
          "desc": null,
          "gid": 3,
          "key": "E-2",
          "name": "Welcome Area",
          "qualified": "Welcome Area"
        },
        "carrying": [],
        "items": [],
        "living": [
          {
            "desc": null,
            "gid": 2,
            "key": "E-1",
            "name": "Living",
            "qualified": "Living"
          }
        ],
        "person": {
          "desc": null,
          "gid": 2,
          "key": "E-1",
          "name": "Living",
          "qualified": "Living"
        },
        "routes": []
      }
    }
  }
}
