plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_looks_inside_containers.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": [
      "insideObservation",
      {
        "items": [
          {
            "desc": null,
            "key": "E-2",
            "name": "Key",
            "qualified": "a Key"
          }
        ],
        "vessel": {
          "desc": null,
          "key": "E-1",
          "name": "Vessel",
          "qualified": "a Vessel"
        }
      }
    ]
  }
}
