plugins/core/src/looking/snapshots/plugins_core__looking__tests__it_sees_worm_items.snap
---
source: plugins/core/src/looking/tests.rs
expression: reply.to_debug_json()?
---
{
  "reply": {
    "taggedJson": {
      "entityObservation": {
        "entity": {
          "desc": null,
          "gid": 3,
          "key": "E-2",
          "name": "Living",
          "qualified": "Living"
        },
        "wearing": [
          {
            "desc": null,
            "gid": 2,
            "key": "E-1",
            "name": "Jacket",
            "qualified": "a Jacket"
          }
        ]
      }
    }
  }
}
